deploy/kubernetes/wdev/wrestlingdev.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrestlingdev-app
  labels:
    app: wrestlingdev
spec:
  ports:
    - port: 80
  selector:
    app: wrestlingdev
    tier: frontend
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrestlingdev-app-deployment
  labels:
    app: wrestlingdev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wrestlingdev
  template:
    metadata:
      labels:
        app: wrestlingdev
        tier: frontend
    spec:
      containers:
      - name: wrestlingdev-app
        image: jcwimer/wrestlingdev:prod
        imagePullPolicy: Always
        command: ["bundle"]
        args: ["exec", "passenger", "start", "-p", "80", "--max-pool-size", "3","--environment", "production"]
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            memory: "512Mi"
            cpu: "0.5"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrestlingdev-worker-deployment
  labels:
    app: wrestlingdev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wrestlingdev
  template:
    metadata:
      labels:
        app: wrestlingdev
        tier: worker
    spec:
      containers:
      - name: wrestlingdev-worker
        image: jcwimer/wrestlingdev:prod
        imagePullPolicy: Always
        command: ["bundle"]
        args: ["exec", "bin/delayed_job", "-n", "1", "run"]
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            memory: "512Mi"
            cpu: "0.2"
